style(Menu): ensure that icon of menu item is horizontal-center after Menu collapsed

--- a/components/Menu/style/index.less
+++ b/components/Menu/style/index.less
@@ -374,6 +374,7 @@
     // Hide text after icon when menu is collapsed
     @style-item-text: {
       .@{prefix}-icon {
+        margin-left: 1px;
         margin-right: 100vw;
       }
     };
@@ -550,6 +551,7 @@
     @rtl-style-item-text: {
       .@{prefix}-icon {
         margin-left: 100vw;
+        margin-right: 1px;
       }
     };
     .applyStyleToItem(  @rtl-style-item-text);
